<resources>
    <string name="app_name">KIBU-OLX</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="cheap_and_affordable">Cheap and Affordable</string>
    <string name="easy_and_accessible">Easy and Accessible</string>
    <string name="lorem_ipsum">

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget neque sed est pellentesque faucibus nec quis leo. Duis consequat turpis eget pretium vehicula. Fusce dictum augue pharetra libero pulvinar, quis viverra tellus porta. Fusce sed diam et nulla sagittis semper vel quis ex. Nunc eget luctus urna. Mauris tincidunt feugiat mauris at euismod. Quisque vel metus in justo placerat hendrerit a sed erat. Pellentesque vitae mollis nulla. Etiam eu cursus sapien. Ut laoreet condimentum lectus finibus lobortis.

Nulla a rutrum dui. Vivamus non sem scelerisque, dignissim justo sed, scelerisque urna. Maecenas et velit vehicula, vehicula nisi at, aliquet metus. Nulla eu nisi id dui sollicitudin dapibus non a nulla. Sed tempus fringilla leo, id viverra sapien. Nulla eu nulla sem. Quisque vitae viverra diam, eget consectetur risus. Nulla dapibus nisi finibus, viverra mi ac, suscipit purus. Fusce vestibulum, est ut accumsan venenatis, mauris enim vulputate magna, non mollis massa justo eu eros. Sed aliquet nibh in commodo egestas. Donec nec dui sed libero efficitur mollis vitae quis diam. Aenean eget lectus quis ipsum tincidunt egestas. Donec rutrum ligula massa, vel condimentum leo hendrerit sit amet. Phasellus eget nunc id felis sollicitudin ultricies. Sed a vestibulum enim, a facilisis diam.

Nullam tempus lacinia molestie. Suspendisse pulvinar justo vel turpis consequat, et gravida tellus egestas. Aliquam elementum mi at consectetur faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque purus justo, blandit eu aliquam eget, dignissim id orci. Pellentesque vel est in quam fermentum cursus. Morbi eleifend neque sit amet purus faucibus elementum. Pellentesque nunc elit, laoreet at neque pretium, finibus feugiat massa. Suspendisse tempor lobortis lorem non tincidunt. Praesent condimentum nisi non quam pulvinar eleifend. Proin aliquam fermentum orci, ut ultrices nisl commodo sit amet. Donec eu lorem at urna maximus lobortis. Nunc nunc ex, facilisis id faucibus ut, tincidunt et ante. Duis tempor iaculis nisl eu fermentum. Curabitur et placerat purus. Mauris molestie, augue ac facilisis volutpat, dolor orci facilisis sem, quis tempus nisi arcu et purus.

Sed maximus imperdiet est, quis lacinia turpis porta sed. Aenean in erat eget mauris pharetra ultricies. Nullam eleifend turpis et iaculis tempus. Nullam ac lacus bibendum, ornare justo ac, vestibulum lorem. Integer vel nibh fermentum, condimentum est non, aliquam libero. Nulla faucibus turpis eget tellus tincidunt, auctor iaculis nisl interdum. Ut finibus orci et nisl vehicula gravida. Vestibulum gravida maximus porttitor. Vivamus id diam ex. Maecenas vel porttitor erat, et vestibulum augue. Sed facilisis sem purus, nec luctus dolor efficitur ac. Duis tristique nisl ac nulla lacinia finibus. Donec dictum lectus a nisi semper, id lobortis dui interdum.

Vestibulum luctus diam tincidunt nisi fringilla iaculis. Cras fermentum sollicitudin vulputate. Fusce in nibh risus. Maecenas lobortis molestie lorem, eget mollis urna placerat nec. Sed et pharetra nisi. Sed a cursus ligula. Praesent commodo ex ac lectus mattis ullamcorper. Sed ac vestibulum enim. Phasellus id nunc facilisis, gravida nunc eu, ornare lorem. Etiam luctus quam ac nibh luctus, sed consectetur ligula luctus. Mauris consectetur ornare enim. Vestibulum dignissim id risus non malesuada. Vivamus varius eu eros vestibulum commodo. </string>
    <string name="all_items_in_one_place">All Items in One Place</string>
    <string name="filter">Filter</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="sell">Sell</string>
    <string name="sold_out">Sold out</string>
    <string name="items_posted_history">Posted Items History</string>
    <string name="edit">Edit</string>
    <string name="post_advertisement">Post Advertisement</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_agree_with_the_rules">I agree with the rules</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign In</string>
    <string name="don_t_have_an_account_register">Don\'t Have An Account? Register</string>
    <string name="itemPrice">Price</string>
    <string name="phone_number">Phone Number e.g 712345678</string>
    <string name="last_seen">Last seen</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="pick_item_images">Pick Item Images</string>
    <string name="select_location">Select Location</string>
    <string name="select_category">Select Category</string>
    <string name="item_name">Item Name</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="item_description">Item Description…</string>
    <string name="category">Category</string>
    <string-array name="location">
        <item>Choose Location</item>
        <item>Kibabii</item>
        <item>Tuuti</item>
        <item>Dorminion</item>
        <item>Booster</item>
        <item>21st Centuary</item>
        <item>Butieli</item>
        <item>MMUST</item>
        <item>Makutano</item>
        <item>Mayanja</item>
        <item>Bukananach</item>
        <item>Cardinal Otunga</item>
        <item>Others</item>
    </string-array>
    <string-array name="condition">
        <item>Condition</item>
        <item>Used</item>
        <item>New</item>
        <item>Refurbished</item>
    </string-array>
    <string name="save">Save</string>
    <string name="reset_all">Reset All</string>
    <string name="filters">Filters</string>
    <string name="done">Done</string>
    <string name="electronics">Electronics</string>
    <string name="mode">Mode</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="you_have_nothing_saved_as_favorite">You have nothing saved as favorite</string>
    <string name="buy_sell_online_everything_you_need_get_a_variety_of_products_all_in_one_place"><![CDATA[Buy & Sell different items you need online, Get a Variety of products all in one place]]></string>
    <string name="easy_to_acquire_items_from_a_fellow_comrade_sell_faster_buy_smarter_at_kibu_olx">Easy to acquire items from a fellow comrade. Sell faster, buy smarter at KIBU-OLX</string>
    <string name="buy_items_at_best_and_cheap_comrade_prices">Buy different affordable items at a cheap and best comrade prices. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="okay">Okay</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="app_crashes_or_suggestion">App Crashes or Suggestion</string>
    <string name="subject">Subject</string>
</resources>